grammar.js
    source_file: $ => repeat($._declaration),

    _declaration: $ => choice(
      $.model_type_declaration,
      $.const_declaration,
      $.global_declaration,
      $.formula_declaration,
      $.label_declaration,
      $.player_declaration,
      $.module_declaration,
      $.reward_declaration,
      $.state_formula,
    ),

    // ═══════════════════════════════════════════
    // Property specification (rPATL + PCTL/CSL)
    // ═══════════════════════════════════════════

    // State formula: the top-level property language
    // Used at top-level and as operands inside path/reward queries
    state_formula: $ => choice(
      $.expression,
      // Game properties (with coalition prefix)
      $.zero_sum_property,
      $.nonzero_sum_property,
      $.game_multi_objective,
      // Non-game properties (standalone P, S, R)
      $.path_property,
      $.steady_state_property,
      $.reward_property,
      // Non-game multi-objective: multi(...)
      $.multi_property,
      // Filters: filter(op, prop, states?)
      $.filter_property,
    ),

    // "label_name" as a state formula reference (inside properties)
    label_ref: $ => seq('"', field('name', $.identifier), '"'),

    // ═══════════════════════════════════════════
    // Game-specific properties (rPATL)
    // ═══════════════════════════════════════════

    // ── Zero-sum properties ──
    // <<coalition>> P... [...] or <<coalition>> R... [...]
    path_property: $ => seq(
      field('condition', $.prob_condition),
      '[',
      field('query', $.path_query),
      ']',
    ),

    // Probability condition: P=?, Pmin=?, Pmax=?, P>=val, P<=val, P>val, P<val
    prob_condition: $ => choice(
      'Pmin=?',
      'Pmax=?',
      'P=?',
      seq('P', field('operator', choice('>=', '<=', '>', '<')), field('threshold', $.expression)),
    ),

    // ── Steady-state properties (S operator) ──
    // S=? [ expr ], S>=val [ expr ], S<0.05 [ expr ]
    steady_state_property: $ => seq(
      field('condition', $.steady_state_condition),
      '[',
      field('operand', $.state_formula),
      ']',
    ),

    steady_state_condition: $ => choice(
      'S=?',
      seq('S', field('operator', choice('>=', '<=', '>', '<')), field('threshold', $.expression)),
    ),

    // ── Path queries ──
    // X phi, F phi, F<=k phi, phi U phi, phi U<=k phi,
    // G phi, G<=k phi, phi W phi, phi R phi (release)
    path_query: $ => choice(
      $.next_query,
      $.eventually_query,
      $.globally_query,
      $.until_query,
      $.weak_until_query,
      $.release_query,
      // R(path){"r"}>=val [ S ] — path reward inside P>=1 [...]
      // for almost-sure satisfaction of mean-payoff or ratio reward objectives
      $.path_reward_query,
    ),

    next_query: $ => seq(
      'X',
      field('operand', $.state_formula),
    ),

    eventually_query: $ => seq(
      'F',
      optional(field('bound', $.temporal_bound)),
      field('operand', $.state_formula),
    ),

    globally_query: $ => seq(
      'G',
      optional(field('bound', $.temporal_bound)),
      field('operand', $.state_formula),
    ),

    until_query: $ => seq(
      field('left', $.state_formula),
      'U',
      optional(field('bound', $.temporal_bound)),
      field('right', $.state_formula),
    ),

    weak_until_query: $ => seq(
      field('left', $.state_formula),
      'W',
      optional(field('bound', $.temporal_bound)),
      field('right', $.state_formula),
    ),

    temporal_bound: $ => choice(
      seq('<=', field('bound', $.expression)),
      seq('>=', field('bound', $.expression)),
      seq('<', field('bound', $.expression)),
      seq('>', field('bound', $.expression)),
      seq('=', field('bound', $.expression)),
      seq(
        '[',
        field('low', $.expression),
        ',',
        field('high', $.expression),
        ']',
      ),
    ),

    // ── Reward properties ──
    // R{"name"}min=? [ ... ], R>=val [ ... ], Rmin=? [ ... ],
    // R{"name"}>=val [ ... ], R{"r"}/{"c"}>=val [ ... ],
    // R=? [ ... ], R{2}=? [ ... ]
    reward_property: $ => choice(
      // R{"name"}/{"name"} cond [...] — ratio reward (named)
      seq(
        'R',
        '{', '"', field('reward_name', $.identifier), '"', '}',
        '/', '{', '"', field('ratio_cost', $.identifier), '"', '}',
        field('condition', $.reward_condition),
        '[', field('query', $.reward_query), ']',
      ),
      // R{"name"} cond [...] — named reward
      seq(
        'R',
        '{', '"', field('reward_name', $.identifier), '"', '}',
        field('condition', $.reward_condition),
        '[', field('query', $.reward_query), ']',
      ),
      // R{index} cond [...] — indexed reward
      seq(
        'R',
        '{', field('reward_index', $.expression), '}',
        field('condition', $.reward_condition),
        '[', field('query', $.reward_query), ']',
      ),
      // Rmin=? [...], Rmax=? [...], R>=val [...], R=? [...] — unnamed reward
      seq(
        field('condition', $.reward_condition_no_name),
        '[', field('query', $.reward_query), ']',
      ),
    ),

    // Reward condition (after R{"name"} or R{index})
    reward_condition: $ => choice(
      'min=?',
      'max=?',
      '=?',
      seq(field('operator', choice('>=', '<=', '>', '<')), field('threshold', $.expression)),
    ),

    // Reward condition without name: Rmin=?, Rmax=?, R=?, R>=val, R>val
    reward_condition_no_name: $ => choice(
      'Rmin=?',
      'Rmax=?',
      'R=?',
      seq('R', field('operator', choice('>=', '<=', '>', '<')), field('threshold', $.expression)),
    ),

    // ── Reward queries ──
    // I=k, C, C<=k, F phi, Fc phi, F0 phi, S
    reward_query: $ => choice(
      $.instantaneous_reward,   // I=k
      $.cumulative_reward,      // C or C<=k
      $.reachability_reward,    // F phi
      $.cumulative_reachability,// Fc phi (games-specific)
      $.zero_reward,            // F0 phi (games-specific)
      $.steady_state_reward,    // S
    ),

    instantaneous_reward: $ => seq(
      'I', '=', field('step', $.expression),
    ),

    cumulative_reward: $ => seq(
      'C',
      optional(field('bound', $.temporal_bound)),
    ),

    reachability_reward: $ => seq(
      'F',
      field('operand', $.state_formula),
    ),

    steady_state_reward: $ => 'S',

    // R(path){"r"}>=val [ S ] — path reward formula inside a P>=1[...] context
    multi_property: $ => seq(
      'multi',
      '(',
      commaSep1($._multi_objective_item),
      ')',
    ),

    _multi_objective_item: $ => choice(
      $.path_property,
      $.reward_property,
    ),

    // ═══════════════════════════════════════════
    // Filters: filter(op, prop, states?)
    // ═══════════════════════════════════════════

    filter_property: $ => seq(
      'filter',
      '(',
      field('operator', $.filter_operator),
      ',',
      field('property', $.state_formula),
      optional(seq(',', field('states', $.state_formula))),
      ')',
    ),

    filter_operator: $ => choice(
      'min', 'max', 'count', 'sum', 'avg',
      'first', 'range', 'forall', 'exists',
      'state', 'argmin', 'argmax', 'print', 'printall',
      // Shorthand operators
      '+', '&', '|',
    ),

    // ═══════════════════════════════════════════
    // Model language
    // ═══════════════════════════════════════════

    expression: $ => choice(
      $.integer_literal,
      $.double_literal,
      $.boolean_literal,
      $.variable,
      $.label_ref,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.function_call,
      $.parenthesized_expression,
    ),

    // --- Literals ---
    integer_literal: $ => /-?\d+/,
    double_literal: $ => /-?\d+\.\d+/,
    binary_expression: $ => choice(
      prec.left(10, seq(field('left', $.expression), '^', field('right', $.expression))),
      prec.left(9, seq(field('left', $.expression), '*', field('right', $.expression))),
      prec.left(9, seq(field('left', $.expression), '/', field('right', $.expression))),
      prec.left(8, seq(field('left', $.expression), '+', field('right', $.expression))),
      prec.left(8, seq(field('left', $.expression), '-', field('right', $.expression))),
      prec.left(7, seq(field('left', $.expression), '<', field('right', $.expression))),
      prec.left(7, seq(field('left', $.expression), '<=', field('right', $.expression))),
      prec.left(7, seq(field('left', $.expression), '>=', field('right', $.expression))),
      prec.left(7, seq(field('left', $.expression), '>', field('right', $.expression))),
      prec.left(6, seq(field('left', $.expression), '=', field('right', $.expression))),
      prec.left(6, seq(field('left', $.expression), '!=', field('right', $.expression))),
      prec.left(5, seq(field('left', $.expression), '&', field('right', $.expression))),
      prec.left(4, seq(field('left', $.expression), '|', field('right', $.expression))),
      prec.left(3, seq(field('left', $.expression), '<=>', field('right', $.expression))),
      prec.right(2, seq(field('left', $.expression), '=>', field('right', $.expression))),
    ),

    // --- Ternary conditional ---
    // condition ? a : b — right associative, lowest precedence
    variable: $ => seq(
      field('name', $.identifier),
      optional('\''),
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Comment definitions
    // @ts-ignore
